retrieveUnpackaged/objects/Map__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>a-{000}</displayFormat>
        <label>Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps</pluralLabel>
    <recordTypes>
        <fullName>Agents</fullName>
        <active>true</active>
        <label>Agents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rentals</fullName>
        <active>true</active>
        <label>Rentals</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tenants</fullName>
        <active>true</active>
        <label>Tenants</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendors</fullName>
        <active>true</active>
        <label>Vendors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>